
Mar 24
- list of implementations
- customize for OttawaRuby Security
= start with jump_off http://github.com/ryanlowe/jump_off