@@ -4,6 +4,7 @@
     <li class="first"><%= link_to 'Home', home_url %></li>
     <!--li><%= link_messages %></li-->
     <!--li><%= link_to 'People', people_url %></li-->
+    <li><%= link_to 'Sources', sources_url %></li>
   </ul>
 </div>
 <% end -%>
