@@ -1,0 +1,5 @@
+<div>
+  <ul>
+    <li><%= link_to 'http://www.rorsecurity.info', 'http://www.rorsecurity.info' %></li>
+  </ul>
+</div>
